--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node src/api/server.tsx",
-    "dev": "nodemon src/api/server.tsx",
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
