--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,7 @@
     "framer-motion": "^8.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.7.1",
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "swiper": "^8.4.6",
