--- a/front-end/package.json
+++ b/front-end/package.json
@@ -16,7 +16,10 @@
     "swiper": "^8.4.6",
     "web-vitals": "^2.1.4"
   },
+  "homepage": "https://brunoCabralSilva.github.io/guiadasmatilhas",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -41,6 +44,7 @@
     ]
   },
   "devDependencies": {
+    "gh-pages": "^5.0.0",
     "tailwindcss": "^3.2.4"
   }
 }
